fix: update margin for navigation brand actions and login for improved spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -401,7 +401,7 @@ img {
   }
 
   .nav__brand-actions > * + * {
-    margin-left: .22rem;
+    margin-left: .42rem;
   }
 
   .nav__actions {
@@ -414,7 +414,7 @@ img {
 
   .nav__actions .nav__search + .nav__login,
   .nav__actions .nav__search + .nav__user {
-    margin-left: .22rem;
+    margin-left: .42rem;
   }
 
   .nav__actions .nav__search,
